--- a/index.ipynb
+++ b/index.ipynb
@@ -38,11 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "q = \"\"\"\n",
+    "SELECT Name,Salary\n",
+    "    FROM employees\n",
+    "    ORDER BY Salary DESC\n",
+    "    LIMIT 5;\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -84,8 +90,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "q = \"\"\"\n",
+    "SELECT author_name, SUM(copies_sold) AS total_books_sold\n",
+    "FROM authors\n",
+    "JOIN books\n",
+    "USING(book_name)\n",
+    "GROUP BY author_name\n",
+    "ORDER BY total_books_sold DESC\n",
+    "LIMIT 3;\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -104,7 +125,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "q = \"\"\"\n",
+    "SELECT *,COUNT(ordersNumber) AS total_orders,days_purchased\n",
+    "FROM customers c\n",
+    "JOIN orders o\n",
+    "ON o.orderNumber = c.orderNumber\n",
+    "GROP BY customers\n",
+    "HAVING OUNT(ordersNumber)>=2\n",
+    "ORDER BY total_orders\n",
+    "LIMIT 2;\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "SELECT c.name, COUNT(DISTINCT o.OrderDate) as NumOrderDates FROM (SELECT c.name, o.quantity FROM Customers c \n",
+    "    JOIN Orders o ON c.orderNumber = o.OrderNumber\n",
+    "    WHERE o.quantity > 1)\n",
+    "WHERE NumOrderDates > 1\n",
+    "\"\"\""
    ]
   },
   {
@@ -141,7 +182,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "q = \"\"\"\n",
+    "SELECT d.NAME,COUNT(e.ID) AS num_employees\n",
+    "FROM Department d\n",
+    "LEFT JOIN employees e\n",
+    "USING(DEPT_ID)\n",
+    "GROUP BY d.DEPT_ID,d.NAME\n",
+    "ORDER BY  num_employees DESC ,d.NAME;\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -156,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
